maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:7: error: type mismatch;
 found   : Int
 required: String
        return i
               ^JediEscaper:3: error: type mismatch;
 found   : Unit
 required: String
  for(i<- 0 to (getMondeLargeur()-1)){
       ^